// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts english version renders correctly 1`] = `
<div
  className="sc-bdfBwQ gSQAtd"
>
  <ul
    className="sc-gsTCUz ieuZAF"
  >
    <li
      className="sc-dlfnbm haUCCe"
    >
      <span>
        Email
      </span>
       - 
      <a
        href="mailto:michael@danilov.me"
      >
        michael@danilov.me
      </a>
    </li>
    <li
      className="sc-dlfnbm haUCCe"
    >
      <span>
        Telegram
      </span>
       - 
      <a
        href="https://t.me/MichaelDanilov"
      >
        @MichaelDanilov
      </a>
    </li>
    <li
      className="sc-dlfnbm haUCCe"
    >
      <span>
        Twitter
      </span>
       - 
      <a
        href="https://twitter.com/MonkAlbino"
      >
        @MonkAlbino
      </a>
    </li>
    <li
      className="sc-dlfnbm haUCCe"
    >
      <a
        href="https://fb.me/michaeldanilov"
      >
        Facebook
      </a>
    </li>
  </ul>
</div>
`;

exports[`Contacts russian version renders correctly 1`] = `
<div
  className="sc-bdfBwQ gSQAtd"
>
  <ul
    className="sc-gsTCUz ieuZAF"
  >
    <li
      className="sc-dlfnbm haUCCe"
    >
      <span>
        Электронная почта
      </span>
       - 
      <a
        href="mailto:michael@danilov.me"
      >
        michael@danilov.me
      </a>
    </li>
    <li
      className="sc-dlfnbm haUCCe"
    >
      <a
        href="https://vk.me/michael.danilov"
      >
        ВКонтакте
      </a>
    </li>
    <li
      className="sc-dlfnbm haUCCe"
    >
      <span>
        Twitter
      </span>
       - 
      <a
        href="https://twitter.com/MonkAlbino"
      >
        @MonkAlbino
      </a>
    </li>
    <li
      className="sc-dlfnbm haUCCe"
    >
      <a
        href="https://fb.me/michaeldanilov"
      >
        Facebook
      </a>
    </li>
  </ul>
</div>
`;
